--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -15,9 +15,14 @@
         </tr>
       </thead>
       <tbody>
-        <% enhanced_cart.each do |item| %>
-          <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
-        <% end %>
+      <% if enhanced_cart.length == 0 %>
+      <div><a href="/">Go Home, you did not get a plant!</a></div>
+     <% else %>
+     <% enhanced_cart.each do |item| %>
+      <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
+      
+    <% end %>
+        
       </tbody>
       <tfoot>
         <tr>
@@ -35,6 +40,7 @@
   <div class="row">
     <div class="col-xs-12">
       <%= form_tag orders_path do %>
+        <% end %>
         <script
           src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
