--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<h1>Admin Dashboard</h1>
+<br>
+<h3>Total Products <%= @product_count %></h3>
+<h3>Total Categories <%= @category_count %></h3>
+<h3>Total Items <%= @item_count %></h3>
