--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -2,4 +2,4 @@
 <br>
 <h3>Total Products <%= @product_count %></h3>
 <h3>Total Categories <%= @category_count %></h3>
-<h3>Total Items <%= @item_count %></h3>
+<h3>Total Stock <%= @item_count %></h3>
