--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -43,6 +43,7 @@
         </li> %>
       </ul>
       <ul class="navbar-nav">
+      <li><%= link_to 'About', [:about, :index], class: "nav-link" %></li>
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-danger"
@@ -57,6 +58,7 @@
           <ul class="dropdown-menu dropdown-menu-dark">
             <li><%= link_to 'Dashboard', [:admin, :root], class: "nav-link" %></li>
             <li><%= link_to 'Products', [:admin, :products], class: "nav-link" %></li>
+           
           </ul>
         </li>
         <li class="nav-item end-0">
